Actualizaciones de la clase 3 y 4.

--- a/Nivel2-B/Documentos/Guia/guia3.tex
+++ b/Nivel2-B/Documentos/Guia/guia3.tex
@@ -91,7 +91,7 @@ Para proyectar la imagen sobre el elipsoide vaya al menú \menu{Radar>Geometric>
     \label{fig:elipsoide}
 \end{figure}
 
-\subsection{Elipsoide - GTC}
+\subsection{Modelo de elevación digital - GTC}
 
 Para proyectar la imagen sobre un modelo de elevación digital vaya al menú \menu{Radar>Geometric>Terrain Correction>Range Doppler Terrain Correction}. Seleccione la imagen
 \begin{center} \texttt{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal\_ML\_DSk}
