--- a/Nivel2-B/Documentos/Videos/clase4.tex
+++ b/Nivel2-B/Documentos/Videos/clase4.tex
@@ -16,7 +16,7 @@
       \begin{equation}
         P_r = \frac{ P_t  G_t  G_r  \lambda^2  \sigma}{ (4\pi)^3 \ R^4}
       \end{equation}
-      Con $P_r$ y $P_t$ las las potencias recibidas y transmitidas, $G_r$ y $G_t$ las ganancias del emisor y receptor, $\lambda$ la longitud de onda, $\sigma$ el coeficiente de backscatter o retrodisperción y $R$ la distancia entre el emisor y el blanco.
+      Con $P_r$ y $P_t$ las potencias recibidas y transmitidas, $G_r$ y $G_t$ las ganancias del emisor y receptor, $\lambda$ la longitud de onda, $\sigma$ el coeficiente de backscatter o retrodisperción y $R$ la distancia entre el emisor y el blanco.
     \end{block}
 \end{frame}
 %--- Next Frame ---%
@@ -54,7 +54,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{fig:onda.png}
-    \caption{Una onda electromagnética es una oscilación en el campo electromagnético. Esta oscilación puede estar orientada en varias direcciones. Estas direcciones se llaman estado de polarización.}
+    \caption{Una onda electromagnética es una oscilación en el campo electromagnético, puede estar orientada en distintas direcciones, llamadas estado de polarización.}
     \label{}
   \end{figure}
 \end{frame}
@@ -64,7 +64,7 @@
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:polarizado.png}}{./figs/fig:polarizado.mp4}
-    \caption{Entre los estados de polarización más típicos se pueden destacar la polarización lineal y la circular}
+    \caption{Entre los estados de polarización más típicos se pueden destacar la polarización lineal y la circular.}
     \label{}
   \end{figure}
 \end{frame}
@@ -76,7 +76,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.55\textwidth]{fig:polarizacion.png}
-    \caption{Algunos SAR pueden emitir y recibir tanto en H (Horizontal) -perpendicular al plano de incidencia- como en V (Vertical) -paralela al plano de incidencia-. Combinadolas entre transmisión y recepción se obtienen 4 combinaciones polarimétricas: {\bf HH, HV, VH, y VV}}
+    \caption{Algunos SAR pueden emitir y recibir tanto en H (Horizontal) -perpendicular al plano de incidencia-, como en V (Vertical) -paralela al plano de incidencia-. Combinándolas entre transmisión y recepción se obtienen 4 combinaciones polarimétricas: {\bf HH, HV, VH, y VV}.}
     \label{}
   \end{figure}
 \end{frame}
@@ -139,7 +139,7 @@
         B = \left(\frac{HH+VV}{\sqrt{2}}\right)^2
       \end{equation}
      \end{block}
-    La descomposición de Pauli es una manera de visual de ver los distintos mecanismo de scattering presentes: azul -especular-, verde -en volumen- y rojo -doble rebote-.
+    La descomposición de Pauli es una manera de visualizar los distintos mecanismo de scattering presentes: azul -especular-, verde -en volumen- y rojo -doble rebote-.
 \end{frame}
 %--- Next Frame ---%
 
