--- a/Nivel2-B/Documentos/Videos/presentacion.tex
+++ b/Nivel2-B/Documentos/Videos/presentacion.tex
@@ -1,4 +1,4 @@
-\documentclass[handout,aspectratio=169]{beamer}
+\documentclass[aspectratio=169]{beamer}
 %\usepackage{pgfpages}
 %\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
 \usetheme[block=fill,progressbar=frametitle,numbering=none]{metropolis}
