--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -226,9 +226,9 @@ En esta aplicación se verá como detectar áreas urbanas, utilizando imágenes 
 \end{que}
 
 \begin{que}
-  Obtenga un mapa de zonas anegadas. Utilice la herramienta \menu{Band math...} (Apéndice \ref{ap:HA}) con click derecho sobre el nombre de la imagen e ingrese la formula
+  Obtenga un mapa de zonas urbanas. Utilice la herramienta \menu{Band math...} (Apéndice \ref{ap:HA}) con click derecho sobre el nombre de la imagen e ingrese la formula
   \begin{center}
-      \path{BANDA < T}
+      \path{BANDA > T}
   \end{center}
   donde T es el valor obtenido en el punto anterior.
 \end{que}
