Correccion de la guia para que compile.

--- a/Nivel1-A/Documentos/Guia/guia.tex
+++ b/Nivel1-A/Documentos/Guia/guia.tex
@@ -1,20 +1,19 @@
 \documentclass[a4paper,12pt]{report}
 \input{preamble.tex}
 \usepackage{float}
-\includeonly{guia5}
+%\includeonly{guia5}
 \graphicspath{{./figs/}}
 % Renombro lo capitulos
 \addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
 
-\title{{\large Nivel 2} \\ Introducción a la teledetección SAR}
+\title{{\large Nivel 1} \\ Introducción a la teledetección}
 \author[*]{Francisco Nemiña\thanks{fnemina@conae.gov.ar}}
 
-\author[**]{Tomas Zajc}
+\author[*]{Diego Schell}
 
 %\author[**]{Laura Rouco}
 
 \affil[*]{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
-\affil[**]{Misión SAOCOM \\ Comisión Nacional de Actividades Espaciales}
 
 \date{}
 \begin{document}
