--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -1,4 +1,4 @@
-\chapter{NOMBRE CLASE 1}
+\chapter{Fundamentos sensores remotos}
 
 Esta clase tiene como objetivo familiarizarze con el entorno gráfico del \emph{SNAP}. El \emph{SNAP (Sentinel Aplication Toolbox)} es un  software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europea (ESA)}, cuyas herramientas simplifican el trabajo con imágenes radar y ópticas.
 
@@ -32,7 +32,7 @@ Descomprima el archivo \directory{material.zip}. Abra el programa SNAP, allí en
 \section{Apertura de imágenes}
 
 Desde el menú \menu{File>Open product...} abra la imagen
-\begin{center} \directory{LC08_224-078_2018-01-05.dim}.
+\begin{center} \directory{LC08\_224-078\_2018-01-05.dim}.
 \end{center}
 Haga doble click sobre el nombre de la imágen y se desplegará, en el \menu{Product Explorer} un árbol que incluye:
 \\
@@ -103,7 +103,7 @@ Allí encontrará la latitud y longitud, las coordenadas dentro del mapa y el va
 \section{Multiples visualizadores}
 
 Abra las imágenes
-\begin{center} \directory{S2B_MSIL2A_2018-01-31.dim}.
+\begin{center} \directory{S2B\_MSIL2A\_2018-01-31.dim}.
 \end{center}
 y
 \begin{center} \directory{MCD43A4.A2018039.h13v11.0065.dim}.
@@ -115,7 +115,7 @@ Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mo
 
 \section{Actividad práctica}
 
-\begin{\begin{enumerate}
+\begin{enumerate}
   \item Identifique en la imagen los siguientes objetos:
   \begin{itemize}
     \item El río Iguazú que recorre la imagen de izquierda a derecha en color gris/marron.
