Cambiar de itemize a enumerate en la actividad practica.

--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -117,7 +117,7 @@ Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mo
 
 \begin{enumerate}
   \item Identifique en la imagen los siguientes objetos:
-  \begin{itemize}
+  \begin{enumerate}
     \item El río Iguazú que recorre la imagen de izquierda a derecha en color gris/marron.
     \item El río Paraná que corta la imagen de arriba a abajo celestre.
     \item La ciudad de Puerto Iguazú al sur-este del cruce de los rios Iguazú y Paraná.
@@ -127,19 +127,19 @@ Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mo
     \item El embalse Urugua-í al sur de la imagen.
     \item La zona de forestaciones en color verde más oscuro entre la selva Paranaense y el embalse Urugua-í.
     \item El aeropuerto de cataratas del Iguazú en medio de la selva Paranaense.
-  \end{itemize}
+  \end{enumerate}
 
   \item Mida dentro de las tres imágenes los siguientes objetos:
-  \begin{itemize}
+  \begin{enumerate}
     \item El largo de la pista de aterrizaje del aeropuerto.
     \item El ancho del río Paraná frente a la ciudad de Puerto Iguazú.
     \item El perímetro de la ciudad de puerto Iguazú.
     \item El perímetro del parche de selva Paranaense al norte del río Iguazú.
     \item El tamaño de un píxel.
-  \end{itemize}
+  \end{enumerate}
 
   \item Identifique las coordenadas geográficas de los siguientes objetos:
-  \begin{itemize}
+  \begin{enumerate}
     \item El aeropuerto de las cataratas del Iguazú.
     \item La ciudad de Puerto Iguazú.
     \item La ciudad de Foz de Iguazú.
@@ -147,6 +147,6 @@ Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mo
     \item La desembocadura del embalse Urugua-Í.
     \item El cruce entre los ríos Paraná y Iguazú.
     \item Las cataratas del Iguazú donde el río Iguazú se angosta.
-  \end{itemize}
+  \end{enumerate}
 
 \end{enumerate}
