Se agrega una pequeña introducción.

--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -2,7 +2,16 @@
 
 Esta clase tiene como objetivo familiarizarze con el entorno gráfico del \emph{SNAP}. El \emph{SNAP (Sentinel Aplication Toolbox)} es un  software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europea (ESA)}, cuyas herramientas simplifican el trabajo con imágenes radar y ópticas.
 
+Durante el curso se trabajará con imágenes de la región de triple frontera, que incluye el límite entre la provincia de Misiones, en Argentina, Brasil y Paraguay.
 
+En esta zona (Figura \ref{fig:mapa}) se encuentra los Parques Nacionales Iguazú (Argentino) e Iguaçu (Brasil), el aeropuerto internacional de cataratas del Iguazú, los rios Iguazú, frontera entre Argentina y Brasil, y Parana, frontera entre Paraguay y Argentina, las ciudades de Foz de Iguaçu (Brasil), Ciudad del Este (Paraguay) y Puerto Iguazú (Argentina), el embalse Ugugua-Í
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:int.png}
+    \caption{}
+    \label{fig:mapa}
+\end{figure}
 
 \section{Sobre esta guía}
 
