inicio de estructura de la guia 2

--- a/Nivel1-A/Documentos/Guia/guia.tex
+++ b/Nivel1-A/Documentos/Guia/guia.tex
@@ -7,9 +7,10 @@
 \addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
 
 \title{{\large Nivel 1} \\ Introducción a la teledetección}
-\author[*]{Francisco Nemiña\thanks{fnemina@conae.gov.ar}}
+\author[*]{Francisco Nemiña}
 
 \author[*]{Diego Schell}
+
 
 %\author[**]{Laura Rouco}
 
