--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -1,1 +1,109 @@
-\chapter{NOMBRE CLASE 2}
+\chapter{Principios físicos}
+
+El objetivo de esta clase es familiarizarze con los conceptos de combinación de bandas y firma espectral \emph{SNAP (Sentinel Aplication Toolbox)}. Se realizará diferentes combinaciones de bandas teniendo en cuenta la respuesta de los usos y coberturas en función de la combinación de colores. Respuesta espectral de usos y coberturas.
+
+
+
+
+
+\section{Combinación Color Real}
+
+En esta ocasión vamos a visualizar una imagen en color real. Abra la imagen \begin{center} \directory{S2B\_MSIL2A\_2018-01-31.dim}.
+\end{center} seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Por defecto aparecerá la combinación que utiliza las bandas \emph{red}, \emph{green} y \emph{blue} de \emph{Sentinel-2}, desplieguela haciendo click en OK.
+
+Incluir mapa/intro sobre la combinacion de bandas.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.7]{fig:RGB.png}
+    \caption{Ventana de combinación de bandas. Puede eligir una banda para cada canal del monitor (\emph{Red, Green, Blue}) o puede optar por una preseleccionada del menú \emph{Profile}}
+    \label{fig:RGB}
+\end{figure}
+
+Utilice el mapa con puntos de interés para identificar los diferentes usos y coberturas (Figura \ref{fig:mono}). Analice y compare las tonalidades de cada uno en dicha combinación de bandas.
+
+\begin{figure}[h!]
+    \centering
+    \subfloat[]{\includegraphics[width=0.7\textwidth]{fig:mono.png}}
+    \\
+    \subfloat[]{\includegraphics[scale=0.5]{fig:NAV.png}}
+    \caption{Imagen monobanda desplegada en el visualizador. Herramientas de navegación. De izquierda a derecha: \menu{Selection tool}, para seleccionar objetos, \menu{Panning tool}, para moverse, y \menu{Zooming tool}, para hacer zoom.}
+    \label{fig:mono}
+\end{figure}
+
+\section{Combinaciones de color}
+
+Para medir la distancia entre dos puntos o a lo largo de una poligonal usando la herramienta \menu{Determines the distance between two points} (Figura \ref{fig:distancia}) que se encuentra en la barra de herramientas.
+
+\begin{figure}[h!]
+    \centering
+    %\includegraphics[width=0.3\textwidth]{fig:distancia.png}
+    \caption{Herramienta medición de distancia.}
+    \label{fig:distancia}
+\end{figure}
+
+Para utilizarla haga click sobre la herramienta y luego en un punto de la imagen para comenzar a medir. Dibuje una linea haciendo click en distintos puntos y finalice la medición haciendo doble click en el punto final. El largo de la poligonal y su error aparecerán en kilometros en una ventana emergente.
+
+\section{Consulta de píxel}
+
+Para obtener información sobre un pixel seleccione la pestaña \menu{Pixel info}, junto al \menu{Product explorer} (Figura \ref{fig:pixel}), y posicionese  sobre uno en la imagen.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.3\textwidth]{fig:pixel.png}
+    \caption{Herramienta de consulta de píxel. Puede verse la posición del píxel en la imagen, su latitud y longitud y el valor del píxel para la banda desplegada.}
+    \label{fig:pixel}
+\end{figure}
+
+Allí encontrará la latitud y longitud, las coordenadas dentro del mapa y el valor del pixel en la banda abierta.
+
+\section{Multiples visualizadores}
+
+Abra las imágenes
+\begin{center} \directory{S2B\_MSIL2A\_2018-01-31.dim}.
+\end{center}
+y
+\begin{center} \directory{MCD43A4.A2018039.h13v11.0065.dim}.
+\end{center}
+
+y desplieguelas en combinación de color RGB. Las tres corresponden a la misma zona durante el mes de enero de 2018.
+
+Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mostrandose de esa manera las imágenes vinculadas una junto a la otra. Moverse o hacer zoom en una imagen lo reproducirá en las otras. Para volver al modo habitual haga click en \menu{Window>Tile Single}.
+
+\section{Actividad práctica}
+
+\begin{enumerate}
+  \item Identifique en la imagen los siguientes objetos:
+  \begin{enumerate}
+    \item El río Iguazú que recorre la imagen de izquierda a derecha en color gris/marron.
+    \item El río Paraná que corta la imagen de arriba a abajo celestre.
+    \item La ciudad de Puerto Iguazú al sur-este del cruce de los rios Iguazú y Paraná.
+    \item La zonas cultivadas al norte del río Iguazú con formas de parches en color verde.
+    \item Laz onas cultivadas al oeste del río Paraná formadas por parches de color verde, con cultivo, y rosa, sin cultivo.
+    \item La selva Paranaense al sur del río Iguazú en color verde.
+    \item El embalse Urugua-í al sur de la imagen.
+    \item La zona de forestaciones en color verde más oscuro entre la selva Paranaense y el embalse Urugua-í.
+    \item El aeropuerto de cataratas del Iguazú en medio de la selva Paranaense.
+  \end{enumerate}
+
+  \item Mida dentro de las tres imágenes los siguientes objetos:
+  \begin{enumerate}
+    \item El largo de la pista de aterrizaje del aeropuerto.
+    \item El ancho del río Paraná frente a la ciudad de Puerto Iguazú.
+    \item El perímetro de la ciudad de puerto Iguazú.
+    \item El perímetro del parche de selva Paranaense al norte del río Iguazú.
+    \item El tamaño de un píxel.
+  \end{enumerate}
+
+  \item Identifique las coordenadas geográficas de los siguientes objetos:
+  \begin{enumerate}
+    \item El aeropuerto de las cataratas del Iguazú.
+    \item La ciudad de Puerto Iguazú.
+    \item La ciudad de Foz de Iguazú.
+    \item Ciudad del este.
+    \item La desembocadura del embalse Urugua-Í.
+    \item El cruce entre los ríos Paraná y Iguazú.
+    \item Las cataratas del Iguazú donde el río Iguazú se angosta.
+  \end{enumerate}
+
+\end{enumerate}
