Se agregan las imagenes de la guia de la clase 1 y se corrigen partes de la guia 1.

--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -79,9 +79,11 @@ Explore la imagen utilizando las herramientas de navegación y zoom (Figura \ref
     \subfloat[]{\includegraphics[width=0.7\textwidth]{fig:mono.png}}
     \\
     \subfloat[]{\includegraphics[scale=0.5]{fig:NAV.png}}
-    \caption{Imagen monobanda desplegada en el visualizador. Herramientas de navegación. De izquierda a derecha: \menu{Selection tool}, para seleccionar objetos, \menu{Panning tool}, para moverse, y \menu{Zooming tool}, para hacer zoom.}
+    \caption{Imagen desplegada en el visualizador. Herramientas de navegación. De izquierda a derecha: \menu{Selection tool}, para seleccionar objetos, \menu{Panning tool}, para moverse, y \menu{Zooming tool}, para hacer zoom.}
     \label{fig:mono}
 \end{figure}
+
+Localice dentro de la imagen el aeropuerto de cataratas del Iguazú.
 
 \section{Mediciones}
 
@@ -89,12 +91,16 @@ Para medir la distancia entre dos puntos o a lo largo de una poligonal usando la
 
 \begin{figure}[h!]
     \centering
-    %\includegraphics[width=0.3\textwidth]{fig:distancia.png}
-    \caption{Herramienta medición de distancia.}
+    \subfloat[]{\includegraphics[scale=0.5]{fig:dico.png}}
+    \\
+    \subfloat[]{\includegraphics[width=0.3\textwidth]{fig:distancia.png}}
+    \caption{Herramienta de medición de distancia \menu{Determines the distance between two points} y resultado de la medición.}
     \label{fig:distancia}
 \end{figure}
 
 Para utilizarla haga click sobre la herramienta y luego en un punto de la imagen para comenzar a medir. Dibuje una linea haciendo click en distintos puntos y finalice la medición haciendo doble click en el punto final. El largo de la poligonal y su error aparecerán en kilometros en una ventana emergente.
+
+Mida la longitud de la pista de aterrizaje del aeropuerto de cataratas del Iguazú.
 
 \section{Consulta de píxel}
 
@@ -109,6 +115,8 @@ Para obtener información sobre un pixel seleccione la pestaña \menu{Pixel info
 
 Allí encontrará la latitud y longitud, las coordenadas dentro del mapa y el valor del pixel en la banda abierta.
 
+Halle las coordenadas en latitud y longitud de aeropuerto de cataratas del Iguazú.
+
 \section{Multiples visualizadores}
 
 Abra las imágenes
@@ -120,7 +128,14 @@ y
 
 y desplieguelas en combinación de color RGB. Las tres corresponden a la misma zona durante el mes de enero de 2018.
 
-Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mostrandose de esa manera las imágenes vinculadas una junto a la otra. Moverse o hacer zoom en una imagen lo reproducirá en las otras. Para volver al modo habitual haga click en \menu{Window>Tile Single}.
+Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mostrandose de esa manera las imágenes vinculadas una junto a la otra. Moverse o hacer zoom en una imagen lo reproducirá en las otras. Para volver al modo habitual haga click en \menu{Window>Tile Single} (Figura \ref{fig:multiples}).
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:multiples.png}
+    \caption{Distintas imágenes desplegadas en multiples visualizadores en simultaneo.}
+    \label{fig:multiples}
+\end{figure}
 
 \section{Actividad práctica}
 
