--- a/Nivel1-A/Documentos/Guia/guia3.tex
+++ b/Nivel1-A/Documentos/Guia/guia3.tex
@@ -1,13 +1,14 @@
 \chapter{Adquisición de datos}
 
-Esta clase tiene como objetivo comprender los pasos básicos para adquirir y procesar imágenes satelitales. Para ello se descargarán imágenes de la web y se procesarán para poder ser utilizadas en el SNAP.
+Esta clase tiene como objetivo comprender los pasos básicos para adquirir y procesar imágenes satelitales. Para ello se descargarán imágenes de la web del \emph{level-2 collection} del USGS y se procesarán para poder ser utilizadas en el SNAP.
+
+Se utilizarán imágenes del \emph{level-2 collection} pues estás ya se encuentran corregidas geométrica y atmosféricamente.
 
 \section{Descarga de imágenes}
 
 Para descargar imágenes utilizaremos el catálogo del \href{https://earthexplorer.usgs.gov/}{Earth Explorer}\footnote{\href{https://earthexplorer.usgs.gov/}{https://earthexplorer.usgs.gov/}}. Para esto debe ingresar a la página y registrarse.
 
-
-Diríjase a la página y en la pestaña \texttt{Seach Criteria} seleccione \texttt{Address/Place} y escriba \texttt{Iguazú} haciendo luego click en \menu{Show} . Luego haga click sobre el nombre \textt{Misiones Province, Argentina} para seleccionar dicha zona en el mapa (Figura \ref{fig:busqueda}).
+Diríjase a la página y en la pestaña \texttt{Seach Criteria} seleccione \texttt{Address/Place} y escriba \texttt{Iguazú} haciendo luego click en \menu{Show} . Luego haga click sobre el nombre \texttt{Misiones Province, Argentina} para seleccionar dicha zona en el mapa (Figura \ref{fig:busqueda}).
 
 \begin{figure}[h!]
     \centering
@@ -25,25 +26,158 @@ Haga click en \menu{Data Sets} y en el cuadro \texttt{Data Set Search:} escriba 
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.7\textwidth]{fig:dataset.png}
+    %\includegraphics[width=0.7\textwidth]{fig:dataset.png}
     \caption{Selección de \emph{Dataset} en el catálogo \emph{Earth Explorer} del \emph{USGS}.}
     \label{fig:dataset}
 \end{figure}
 
 Haga luego click en \menu{Results}.
 
-A la izquierda de la pantalla aparecerá una lista de productos. Busque de ellos el de nombre \emph{LC08_L1TP_224078_20170713_20170726_01_T1
+A la izquierda de la pantalla aparecerá una lista de productos. Busque de ellos el de nombre \emph{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1
 } del 13 de julio del 2017, pertenenciente al path 224 y el row 78. Haga click sobre \menu{Order scene}. (Figura \ref{fig:seleccion})
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.7\textwidth]{fig:descarga.png}
+    %\includegraphics[width=0.7\textwidth]{fig:descarga.png}
     \caption{Selección de producto para la descarga en el catálogo \emph{Vertex} del \emph{USGS}.}
     \label{fig:seleccion}
 \end{figure}
 
 Para corroborar el pedido haga click en \menu{View Item Basket} y luego en \menu{Proceed to Checkout}. Finalmente deberá solicitar la imagen haciendo click en \menu{Submit Order}.
 
-El producto descargado pertenece a una serie de producto \emph{on demands} \footnote{A demananda.}. Cuando el mismo esté disponible para descargar se le enviará un correo electrónico notificandolo.
+El producto descargado pertenece a una serie de producto \emph{on demands} \footnote{A demananda.}. Cuando el mismo esté disponible para descargar se le enviará un correo electrónico notificandolo \footnote{Recibirá 3 correos electrónicos en total: dos confirmando el pedido y uno cuando la descarga esté disponible}. El asunto será
+
+\begin{center}
+\texttt{USGS ESPA product request order number [] available for download}
+\end{center}
+
+con \texttt{[]]} el número de pedido. Haga click en el link dentro del correo y en la página que se abre seleccione su pedido en la columna \texttt{Order ID}. Finalmente haga click en \texttt{Download} en la columna \texttt{Product URL} para descargar la imagen.
 
 \textbf{Observación:} El tiempo para que el producto esté disponible puede ser de hasta 48 horas.
+
+Una vez finalizada la descarga descomprima el archivo. Para ello necesitara un descompresor como winrar, 7zip o similar.
+
+\section{Apilado de bandas}
+Dentro de la carpeta descomprimida las distintas bandas de la imagen se encuentras en archivos separados. Abra en el SNAP los archivos
+
+\begin{center} \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band1},
+\end{center}
+\begin{center} \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band2},
+\end{center}
+\begin{center} \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band3},
+\end{center}
+\begin{center} \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band4},
+\end{center}
+\begin{center} \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band5},
+\end{center}
+\begin{center} \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band6}
+\end{center}
+\begin{center} y \directory{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1\_sr\_band7}.
+\end{center}
+
+Aparecerán en el \emph{Product explorer} a la derecha y podrá visualizar las bandas por separado.
+
+Vaya a \menu{Radar > Coregistration > Stack tools > Create Stack} y en la pestañá \menu{1-ProductSet-Reader} haga click en \menu{Add oppened}. Usando los botones \menu{Move up} y \menu{Move down} ordene las bandas según su nombre.
+
+En la pestaña \menu{2-CreateStack} seleccione la opción \emph{Product Geolocation} para el parámetro \menu{Initial Offset method}.
+
+Finalmente en la pestaña \menu{3-Write} elija el nombre del archivo de salida y la carpeta donde se guardarán los datos. Haga luego click en \menu{Run}. El resultado se agregará al \emph{Product explorer}.
+
+\section{Propiedades de la imagen}
+Es de utilidad editar las propiedades de la imagen para agregar los nombres de las bandas, su longitud de onda central y tipo de dato.
+
+En la sección de bandas de la imagen creada, haga click derecho sobre
+\begin{center}
+\texttt{band\_1\_mst\_01Jan2000}
+\end{center}
+y luego seleccione \menu{Properties}. En al ventana que se despliega es posible cambiar el nombre de la banda, la unidad en la que está medida, el valor digital no valido, la longitud de onda central de la banda y su ancho.
+
+Es posible además conocer el tamaño, en píxeles, de la imagen.
+
+Edite los campos \emph{Name} con el valor \texttt{ca} y el campo \emph{Spectral Wavelength} con el valor $442$. Repita el proceso para el resto de las bandas (Tabla \ref{tab:landsat8}).
+
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{@{}lclc@{}}
+  \toprule
+  Bands designation          & Número & Name  & Wavelength {[}nm{]} \\ \midrule
+  Aerosoles costeros         & 1      & ca    & 442                 \\
+  Azul                       & 2      & blue  & 482                 \\
+  Verde                      & 3      & green & 561                 \\
+  Rojo                       & 4      & red   & 655                 \\
+  Infrarrojo cercano         & 5      & nir   & 865                 \\
+  Infrarrojo de onda corta 1 & 6      & swir1 & 1610                \\
+  Infrarrojo de onda corta 2 & 7      & swir2 & 2200                \\ \bottomrule
+  \end{tabular}
+\caption{Nombres de las bandas y longitudes de onda para el producto Landsat 8 - level 2 collection.}
+\label{tab:landsat8}
+\end{table}
+
+Para guardar los cambios realizados en la imagen haga click derecho sobre ella y elija \menu{Save product}.
+
+\section{Subset espacial y espectral}
+Es posible hacer un subset, tanto espacial como espectral, de la imagen. Esto es de utilidad para trabajar solo con nuestra región de interés reduciendo el tamaño de la imagen y por lo tanto los tiempos de procesamiento.
+
+Para hacerlo seleccione la imagen apilada y dirijasé a \menu{Raster > Subset}. En la pestañá \menu{Spatial subset} seleccione la pestaña \menu{Geo Coordinates}.
+
+Haga un recorte entre las coordenadas geográficas
+\begin{itemize}
+    \item North latitude bound: -25.4
+    \item West longitude bound: -54.8
+    \item South latitude bound: -26.0
+    \item East longitude bound: -54.2
+\end{itemize}
+
+\section{Reproyección}
+Para algunas aplicacione la proyección por defecto de la imagen puede no ser la más indicada. Para cambiar la proyección dirijasé a \menu{Raster > Geometric operations > Reprojection}. Seleccione en la pestaña \menu{I/O parameters} la imagen recortada como imagen de entrada. Puede aquí seleccionar el nombre y la carpeta del archivo de salida. Utilice el nombre
+
+\begin{center}
+  \file{LC08\_224-078\_2017-07-13.dim}
+\end{center}
+
+En la pestaña \menu{Reprojection parameters} elija la opción \emph{Custom CRS} y allí del menú desplegable seleccione \emph{UTM / WGS 84 (automatic)}. De esta forma la imagen será reproyectada a la faja correspondiente del sistema de coordenadas \emph{UTM/WGS84}. Haga click en \menu{Run}.
+
+\section{Actividad práctica}
+
+\begin{enumerate}
+  \item Identifique en la imagen descargada los siguientes objetos:
+  \begin{enumerate}
+    \item El río Iguazú que recorre la imagen de izquierda a derecha en color gris/marron.
+    \item El río Paraná que corta la imagen de arriba a abajo celestre.
+    \item La ciudad de Puerto Iguazú al sur-este del cruce de los rios Iguazú y Paraná.
+    \item La zonas cultivadas al norte del río Iguazú con formas de parches en color verde.
+    \item Laz onas cultivadas al oeste del río Paraná formadas por parches de color verde, con cultivo, y rosa, sin cultivo.
+    \item La selva Paranaense al sur del río Iguazú en color verde.
+    \item El embalse Urugua-í al sur de la imagen.
+    \item La zona de forestaciones en color verde más oscuro entre la selva Paranaense y el embalse Urugua-í.
+    \item El aeropuerto de cataratas del Iguazú en medio de la selva Paranaense.
+  \end{enumerate}
+
+  \item Objenga una firma espectral de:
+  \begin{enumerate}
+    \item El río Iguazú.
+    \item El río Paraná.
+    \item El embalse Urugua-í.
+    \item La selva paranaense.
+    \item Una forestación.
+    \item Suelo con cultivo.
+    \item Suelo en descanso.
+  \end{enumerate}
+
+  \item Compare visualmente la imagen Landsat 8 del 5 de enero de 2018 y el 13 de julio de 2017. Elija la combinación de bandas que considere adecuada.
+  \begin{enumerate}
+    \item Que observa sobre el río Paraná e Iguazú.
+    \item Que observa sobre la selva paranaense.
+    \item Que observa en la zona de forestaciones.
+    \item Que observa en la zona de cultivos.
+  \end{enumerate}
+
+  \item Compare las firmas espectrales obtenidas de la imagen Landsat 8 del 5 de enero de 2018 y el 13 de julio de 2017.
+  \begin{enumerate}
+    \item Sobre el río Paraná.
+    \item Sobre el río Iguazú.
+    \item Sobre la selva Paranaense.
+    \item Sobre las forestaciones.
+    \item Sobre un mismo parche de cultivo.
+  \end{enumerate}
+\end{enumerate}
