--- a/Nivel1-A/Documentos/Guia/guia3.tex
+++ b/Nivel1-A/Documentos/Guia/guia3.tex
@@ -2,56 +2,63 @@
 
 Esta clase tiene como objetivo comprender los pasos básicos para adquirir y procesar imágenes satelitales. Para ello se descargarán imágenes de la web del \emph{level-2 collection} del USGS y se procesarán para poder ser utilizadas en el SNAP.
 
-Se utilizarán imágenes del \emph{level-2 collection} pues estás ya se encuentran corregidas geométrica y atmosféricamente.
-
 \section{Descarga de imágenes}
 
 Para descargar imágenes utilizaremos el catálogo del \href{https://earthexplorer.usgs.gov/}{Earth Explorer}\footnote{\href{https://earthexplorer.usgs.gov/}{https://earthexplorer.usgs.gov/}}. Para esto debe ingresar a la página y registrarse.
 
-Diríjase a la página y en la pestaña \texttt{Seach Criteria} seleccione \texttt{Address/Place} y escriba \texttt{Iguazú} haciendo luego click en \menu{Show} . Luego haga click sobre el nombre \texttt{Misiones Province, Argentina} para seleccionar dicha zona en el mapa (Figura \ref{fig:busqueda}).
-
 \begin{figure}[h!]
     \centering
-    %\includegraphics[width=0.7\textwidth]{fig:busqueda.png}
-    \caption{Selección de un área de interés en el catálogo \emph{Vertex} del \emph{Alaska Satellite Facility}}
-    \label{fig:region}
+    \includegraphics[width=0.7\textwidth]{fig:busqueda.png}
+    \caption{Selección de un área de interés y rango de fechas en el catálogo del \emph{USGS}. Puede observarse el área de busqueda en rojo, el área seleccionada en azul y la selección temporal en verde.}
+    \label{fig:busqueda}
 \end{figure}
+
+Diríjase a la página y en la pestaña \texttt{Seach Criteria} seleccione \texttt{Address/Place} y escriba \texttt{Iguazú} haciendo luego click en \menu{Show} . Luego haga click sobre el nombre \texttt{Misiones Province, Argentina} para seleccionar dicha zona en el mapa (Figura \ref{fig:busqueda}).
 
 Seleccione luego en \menu{Data Range} las fechas 1 de julio de 2017 y 31 de julio de 2017.
 
 \textbf{Observación:} Es posible también dibujar una zona de interés directamente sobre el mapa.
 \textbf{Observación:} Para eliminar un punto del mapa haga click en la cruz roja que se encuentra al lado de el en el menú.
 
-Haga click en \menu{Data Sets} y en el cuadro \texttt{Data Set Search:} escriba \texttt{Landsat 8} y seleccione del menú la opción \texttt{Landsat 8 OLI/TIRS C1 Level-2} (Figura \ref{fig:dataset}) para seleccionarlo.
+Haga click en \menu{Data Sets} y en el cuadro \texttt{Data Set Search:} escriba \texttt{Landsat 8} y seleccione del menú la opción \texttt{Landsat 8 OLI/TIRS C1 Level-2} (Figura \ref{fig:dataset}) para seleccionarlo. Haga luego click en \menu{Results}.
 
 \begin{figure}[h!]
     \centering
-    %\includegraphics[width=0.7\textwidth]{fig:dataset.png}
-    \caption{Selección de \emph{Dataset} en el catálogo \emph{Earth Explorer} del \emph{USGS}.}
+    \includegraphics[width=0.7\textwidth]{fig:dataset.png}
+    \caption{Selección de un set de datos en el catálogo del \emph{USGS}. Puede observarse el área de busqueda en rojo y los set de datós seleccionados en verde.}
     \label{fig:dataset}
 \end{figure}
 
-Haga luego click en \menu{Results}.
-
 A la izquierda de la pantalla aparecerá una lista de productos. Busque de ellos el de nombre \emph{LC08\_L1TP\_224078\_20170713\_20170726\_01\_T1
-} del 13 de julio del 2017, pertenenciente al path 224 y el row 78. Haga click sobre \menu{Order scene}. (Figura \ref{fig:seleccion})
+} del 13 de julio del 2017, pertenenciente al path 224 y el row 78. Haga click sobre \menu{Order scene}. (Figura \ref{fig:descarga})
 
 \begin{figure}[h!]
     \centering
-    %\includegraphics[width=0.7\textwidth]{fig:descarga.png}
-    \caption{Selección de producto para la descarga en el catálogo \emph{Vertex} del \emph{USGS}.}
-    \label{fig:seleccion}
+    \subfloat[]{\includegraphics[width=0.7\textwidth]{fig:descarga.png}}
+    \\
+    \subfloat[]{\includegraphics[scale=0.5]{fig:operaciones.png}}
+    \caption{Selección de producto para la descarga en el catálogo \emph{Vertex} del \emph{USGS}. En rojo el botón para ver el pedido. Herramientas del catálogo. De izquierda a derecha en -b- se observa: Footprint, Show Browse Overlay, Compare Browse, Show Metadata and Brose, Order Scene  y Exlude escene from Results.}
+    \label{fig:descarga}
 \end{figure}
 
 Para corroborar el pedido haga click en \menu{View Item Basket} y luego en \menu{Proceed to Checkout}. Finalmente deberá solicitar la imagen haciendo click en \menu{Submit Order}.
 
-El producto descargado pertenece a una serie de producto \emph{on demands} \footnote{A demananda.}. Cuando el mismo esté disponible para descargar se le enviará un correo electrónico notificandolo \footnote{Recibirá 3 correos electrónicos en total: dos confirmando el pedido y uno cuando la descarga esté disponible}. El asunto será
+El producto descargado pertenece a una serie de producto \emph{on demand} \footnote{A demananda.}. Cuando el mismo esté disponible para descargar se le enviará un correo electrónico notificandolo \footnote{Recibirá 3 correos electrónicos en total: dos confirmando el pedido y uno cuando la descarga esté disponible}. El asunto será
 
 \begin{center}
 \texttt{USGS ESPA product request order number [] available for download}
 \end{center}
 
 con \texttt{[]]} el número de pedido. Haga click en el link dentro del correo y en la página que se abre seleccione su pedido en la columna \texttt{Order ID}. Finalmente haga click en \texttt{Download} en la columna \texttt{Product URL} para descargar la imagen.
+
+\begin{figure}[h!]
+    \centering
+    \subfloat[]{\includegraphics[width=0.7\textwidth]{fig:descarga2.png}}
+    \\
+    \subfloat[]{\includegraphics[width=0.7\textwidth]{fig:descarga3.png}}
+    \caption{Descarga de productos una vez obtenido el pedido.}
+    \label{fig:descarga2}
+\end{figure}
 
 \textbf{Observación:} El tiempo para que el producto esté disponible puede ser de hasta 48 horas.
 
@@ -132,7 +139,7 @@ Haga un recorte entre las coordenadas geográficas
 Para algunas aplicacione la proyección por defecto de la imagen puede no ser la más indicada. Para cambiar la proyección dirijasé a \menu{Raster > Geometric operations > Reprojection}. Seleccione en la pestaña \menu{I/O parameters} la imagen recortada como imagen de entrada. Puede aquí seleccionar el nombre y la carpeta del archivo de salida. Utilice el nombre
 
 \begin{center}
-  \file{LC08\_224-078\_2017-07-13.dim}
+  \directory{LC08\_224-078\_2017-07-13.dim}
 \end{center}
 
 En la pestaña \menu{Reprojection parameters} elija la opción \emph{Custom CRS} y allí del menú desplegable seleccione \emph{UTM / WGS 84 (automatic)}. De esta forma la imagen será reproyectada a la faja correspondiente del sistema de coordenadas \emph{UTM/WGS84}. Haga click en \menu{Run}.
